Fix: navigation window was printed. Place holder in the header for tree is replaced because it is visible in printing

--- a/mib2html/mibstyle.css
+++ b/mib2html/mibstyle.css
@@ -215,3 +215,13 @@ dt {
     font-style: italic;
 }
 
+/* override for printer */
+
+@media print {
+    #nav {
+        display: none;
+    }
+    thead {
+        display: table-header-group;
+    }
+}
